# nautilus_quants

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.nightly  README.md  README_CN.md  data  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
config/: alpha_breakout.yaml  alpha_convergence.yaml  alpha_fmz_4factor.yaml  backtest.yaml  backtest_convergence.yaml  backtest_cross_sectional.yaml  backtest_debug.yaml  backtest_factor.yaml  backtest_fmz.yaml  backtest_fmz_4factor.yaml  backtest_fmz_4factor_4year.yaml  backtest_fmz_breakout_lowcorr.yaml  backtest_worldquant_alpha101.yaml  cross_sectional_factors.yaml  data.yaml  data_fmz.yaml  factors.yaml  factors_breakout.yaml  factors_breakout_lowcorr.yaml  factors_convergence.yaml  factors_fmz_4factor.yaml  factors_fmz_simple.yaml  factors_fmz_v1.yaml  factors_worldquant_alpha101.yaml  fmz_factors.yaml  scoring.yaml  trading.yaml
config/alpha_batch/: analyze_alpha101.yaml  analyze_alpha101_p1.yaml  analyze_alpha158.yaml  analyze_alpha191.yaml  analyze_ta.yaml  factors_alpha101.yaml  factors_alpha101_p1.yaml  factors_alpha158.yaml  factors_alpha191.yaml  factors_ta.yaml
config/cross_sectional/: backtest.yaml
config/cs/: alpha_101.yaml  alpha_cs.yaml  alpha_extra_data.yaml  alpha_mining.yaml  alpha_mining_diversified.yaml  alpha_mining_sanapi.yaml  alpha_test_parquet.yaml  backtest.yaml  backtest_40coins.yaml  backtest_extra_data.yaml  backtest_optimized.yaml  backtest_regime.yaml  backtest_regime_llm.yaml  backtest_verify.yaml  data.yaml  data_bybit.yaml  extra_data.yaml  extra_data_sanapi.yaml  factor_alpha_dev_equal.yaml  factor_alpha_dev_icir.yaml  factor_alpha_dev_score.yaml  factors.yaml  factors_alpha101.yaml  factors_alpha_cs.yaml  factors_extra_data.yaml  factors_llm_claude.yaml  factors_test_parquet.yaml  regime_config_default.yaml  regime_llm_claude.yaml  worldquant_bracket_backtest.yaml
config/examples/: alpha_101_45.yaml  backtest.yaml  data.yaml  data_santiment.yaml  factors.yaml  risk.yaml  scoring.yaml  strategy.yaml  tardis_1day_test.yaml  tardis_data.yaml
config/factor/: backtest.yaml  data.yaml  tardis_backtest.yaml  tardis_factors.yaml
config/fmz/: alpha.yaml  alpha_convergence.yaml  backtest.yaml  backtest_4year.yaml  backtest_convergence.yaml  backtest_limit.yaml  data.yaml  factors.yaml  factors_alpha.yaml  factors_alpha101.yaml  factors_alpha2.yaml  factors_alpha3.yaml  factors_convergence.yaml  fmz_factors.yaml  tardis_data.yaml
config/live/: binance_fmz.yaml  okx_fmz.yaml  okx_fmz_demo.yaml  okx_testnet_15m.yaml  okx_testnet_1h.yaml  okx_testnet_nightly.yaml
config/portfolio/: portfolio.yaml  sector_map.yaml
config/worldquant/: alpha.yaml  backtest.yaml  factors.yaml
scripts/: check_ic_autocorr.py  check_ic_autocorr_simple.py  convert_fmz_parquet_to_catalog.py  demo_backtest_with_funding.py  demo_funding_rate.py  download_funding_http.py  generate_factor_yamls.py  mine_loop.sh  plot_ic_autocorr.py  plot_ic_autocorr_key.py  regenerate_fmz_catalog.py  rerun_failed_tune.py  run_batch_analysis.sh  run_batch_chunked.py  smart_mine_loop.sh  tune_uplift_report.py  verify_cross_platform.sh
scripts/data/: pipeline.py
scripts/examples/: factor_demo.py  fmz_factor_verification.py
specs/002-backtest-module/: spec.md
specs/002-backtest-module/checklists/: requirements.md
src/nautilus_quants/: __init__.py
src/nautilus_quants/actors/: __init__.py  equity_snapshot.py  factor_engine.py  regime_composite.py  risk_model.py  screening.py  snapshot_aggregator.py
src/nautilus_quants/alpha/: __init__.py  __main__.py  cli.py  data_loader.py  formatters.py
src/nautilus_quants/backtest/: __init__.py  __main__.py  cli.py  config.py  engine.py  exceptions.py  (+4 more)
tests/: conftest.py
tests/fixtures/: __init__.py  golden_panel_e2e_12coin.json
tests/integration/: test_alpha101.py  test_alpha101_45factors_e2e.py  test_alpha101_alpha_analysis_e2e.py  test_alpha2_factors_individual.py  test_backtest.py  test_binance_bar_integration.py  test_breakout_factor.py  test_engine_consistency.py  test_engine_real_data.py  test_extra_data_real_catalog.py  test_factor_engine.py  test_factor_performance.py  test_factor_strategy.py  test_registry_e2e.py  test_tune_e2e.py
tests/profiling/: profile_panel_engine.py
tests/unit/: test_actors.py  test_indicators.py
(+358 files in other folders)
