[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nautilus-quants"
version = "0.1.0"
description = "Quantitative trading framework built on Nautilus Trader"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Joe" }
]

dependencies = [
    "nautilus_trader==1.222.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3,<3.0.0",
    "pyyaml>=6.0",
    "plotly>=5.18.0",  # For Nautilus native visualization
    # Data pipeline dependencies
    "python-binance>=1.0.19",  # Binance API client
    "click>=8.0.0",  # CLI framework
    "tenacity>=8.0.0",  # Retry logic with exponential backoff
    # Factor framework dependencies
    "lark>=1.1.0",  # Expression parser for Alpha101-style factors
    # Report enhancement
    "quantstats>=0.0.64",  # QuantStats for enhanced backtest reports
    # Alpha factor analysis
    "alphalens-reloaded>=0.0.12",  # Factor quality evaluation (IC/ICIR/quantile returns)
    "scipy>=1.11.0",  # Statistical distributions for cross-sectional quantile operator
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nautilus_quants"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]
